Resizable panels fix collapsed opacity issue

--- a/app/assets/stylesheets/app/_main.scss
+++ b/app/assets/stylesheets/app/_main.scss
@@ -107,6 +107,7 @@ $footer-height: 32px;
 
     &.collapsed {
       opacity: 1;
+      background-color: #DDDDDD;
     }
 
     &.dragging {
